--- a/engine/templates/engine/index.html
+++ b/engine/templates/engine/index.html
@@ -8,14 +8,10 @@
 {% bootstrap_messages %}
 
 {# Display a form #}
-<form action="/url/to/submit/" method="post" class="form">
-  {% csrf_token %}
-  {% bootstrap_form form %}
-  {% buttons %}
-    <button type="submit" class="btn btn-primary">
-      {% bootstrap_icon "star" %} Submit
-    </button>
-  {% endbuttons %}
+<form action="/your-name/" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Submit">
 </form>
 
 {% if allResorts %}
